--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -17,7 +17,7 @@
         %nav
           %ul#nav.sf-menu
             %li.selected
-              %a{:href => ""} Home
+              %a{:href => "home"} Home
             %li
               %a{:href => ""} Resultados
             %li
@@ -26,7 +26,7 @@
                 %li
                   %a{:href => "users"} Usuarios
                 %li
-                  %a{:href => "companys#"} Empresas
+                  %a{:href => "companys"} Empresas
                 %li
                   %a{:href => "#"} Prioridades
                 %li
@@ -56,7 +56,7 @@
     %script{:src => "js/jquery.easing-sooper.js", :type => "text/javascript"}
     %script{:src => "js/jquery.sooperfish.js", :type => "text/javascript"}
     %script{:src => "js/image_fade.js", :type => "text/javascript"}
-      :javascript
+    :javascript
       $(document).ready(function() {
         $('ul.sf-menu').sooperfish();
       });
