Companies Controller - Layout malo
Se genero el controller Companies  pero da error al momento de llamar el
index de Cmpanies

--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -1,14 +1,14 @@
 %h1 Empresas
 %p Listado de empresas
 
-- if @companys.any?
+- if @companies.any?
   %table{border: "1"}
     %tr
       %th Name
       %th Address
       %th City
       %th Phone      
-    = render @companys
+    = render @companies
 - else
   %em No hay ninguna empresa
 
