--- a/app/views/layouts/external.html.haml
+++ b/app/views/layouts/external.html.haml
@@ -26,7 +26,7 @@
                 %li
                   %a{:href => "users"} Usuarios
                 %li
-                  %a{:href => "companys"} Empresas
+                  %a{:href => "companies"} Empresas
                 %li
                   %a{:href => "#"} Prioridades
                 %li
