Agregado las prioridades, y trabajando en las dimensiones, todavia no funciona el filtrado de las dimensiones.

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,7 +28,7 @@
                 %li
                   %a{:href => "companies"} Empresas
                 %li
-                  %a{:href => "#"} Prioridades
+                  =link_to 'Prioridades', priorities_path
                 %li
                   %a{:href => "#"} Dimensiones
                 %li
