--- a/app/views/layouts/external.html.haml
+++ b/app/views/layouts/external.html.haml
@@ -28,7 +28,7 @@
                 %li
                   %a{:href => "companies"} Empresas
                 %li
-                  %a{:href => "#"} Prioridades
+                  =link_to 'Prioridades', priorities_path
                 %li
                   %a{:href => "#"} Dimensiones
                 %li
