agregado link_to de dimentions

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
                 %li
                   =link_to 'Prioridades', priorities_path
                 %li
-                  %a{:href => "#"} Dimensiones
+                  =link_to 'Dimensiones', dimentions_path
                 %li
                   %a{:href => "#"} Factores
                 %li
