--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -42,11 +42,11 @@
                     %a{:href => "#"} Tecnologías
                   %li
                     %a{:href => "#"} Encuestas
-              %li
-                = link_to 'Logout', logout_path, method: :delete
-              %li
-                = link_to 'Mi Perfil', user_path(current_user)
-            - if logged_in?
+                %li
+                  = link_to 'Logout', logout_path, method: :delete
+                %li
+                  = link_to 'Mi Perfil', user_path(current_user)
+            - else
               %li
                 = link_to 'Login', login_path
       #site_content
