--- a/app/views/layouts/external.html.haml
+++ b/app/views/layouts/external.html.haml
@@ -20,7 +20,7 @@
               = link_to 'Home', root_path
             %li
               %a{:href => ""} Resultados
-            - if !logged_in?
+            - if logged_in?
               %li
                 %a{:href => "#"} Administración
                 %ul
@@ -42,11 +42,11 @@
                     %a{:href => "#"} Tecnologías
                   %li
                     %a{:href => "#"} Encuestas
-              %li
-                = link_to 'Logout', logout_path, method: :delete
-              %li
-                = link_to 'Mi Perfil', user_path(current_user)
-            - if logged_in?
+                %li
+                  = link_to 'Logout', logout_path, method: :delete
+                %li
+                  = link_to 'Mi Perfil', user_path(current_user)
+            - else
               %li
                 = link_to 'Login', login_path            
       #site_content
