agregados los factores

--- a/app/views/dimentions/_dimention.html.haml
+++ b/app/views/dimentions/_dimention.html.haml
@@ -1,5 +1,5 @@
 %tr
-  %td prioridad 
+  %td= dimention.priority.title
   /%td=dimention.get_priority(dimention.priority_id)
   %td= link_to dimention.title, dimention_path(dimention.id)
   %td= dimention.weight
