--- a/app/views/dimentions/_factors.html.haml
+++ b/app/views/dimentions/_factors.html.haml
@@ -1,18 +1,18 @@
-- if dimentions.any?
-  %h2 Dimensiones
+- if factors.any?
+  %h2 Factores
 
   %table{border:"1"}
     %tr
       %th Titulo
       %th Peso
 
-    = render dimentions
+    = render factors
     %tr
 
   %br
   %br
 - else
-  %em Aun no tiene Dimensiones
+  %em Aun no tiene Factores
   %br
   %br
   %br
