--- a/app/views/dimentions/_form.html.haml
+++ b/app/views/dimentions/_form.html.haml
@@ -7,5 +7,9 @@
     = f.label :weight
     %br
       = f.number_field :weight
+  .form_row
+    = f.label :priority_id, "Prioridad"
+    %br
+      = f.collection_select :priority_id, Priority.order(:weight), :id, :title, {}, class: "form_select"
   .actions
     = f.submit
