--- a/app/views/layouts/external.html.haml
+++ b/app/views/layouts/external.html.haml
@@ -32,7 +32,7 @@
                 %li
                   =link_to 'Dimensiones', dimentions_path
                 %li
-                  %a{:href => "#"} Factores
+                  =link_to 'Factores', factors_path
                 %li
                   %a{:href => "#"} Tipos AMT
                 %li
