--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -34,7 +34,7 @@
                   %li
                     =link_to 'Dimensiones', dimentions_path
                   %li
-                    %a{:href => "#"} Factores
+                    =link_to 'Factores', factors_path
                   %li
                     %a{:href => "#"} Tipos AMT
                   %li
