Terminado la parte de Dimensiones, factores, y prioridades

--- a/app/views/factors/edit.html.haml
+++ b/app/views/factors/edit.html.haml
@@ -1,2 +1,3 @@
-%h1 Factors#edit
-%p Find me in app/views/factors/edit.html.haml
+= render "form"
+
+= link_to 'Eliminar', delete_factor_path, method: :delete
